--- a/templates/apps/auth/auth.html
+++ b/templates/apps/auth/auth.html
@@ -178,7 +178,7 @@
                     <div class="d-flex align-items-center py-3"><img class="me-2"
                                                                      src="{% static 'apps/assets/img/icons/spot-illustrations/falcon.png' %}"
                                                                      alt="" width="40"/><span
-                            class="font-sans-serif">alijahon</span>
+                            class="font-sans-serif">ikromjahon</span>
                     </div>
                 </a>
             </div>
