--- a/templates/apps/auth/auth.html
+++ b/templates/apps/auth/auth.html
@@ -287,7 +287,7 @@
                     <div class="d-flex align-items-center">
                         <img class="me-2" src="{% static 'apps/assets/img/icons/spot-illustrations/falcon.png' %}" alt=""
                              width="40"/>
-                        <span class="font-sans-serif">alijahon</span>
+                        <span class="font-sans-serif">ikromjahon</span>
                     </div>
                 </a>
                 <ul class="navbar-nav align-items-center d-none d-lg-block">
