--- a/templates/apps/auth/auth.html
+++ b/templates/apps/auth/auth.html
@@ -178,7 +178,7 @@
                     <div class="d-flex align-items-center py-3"><img class="me-2"
                                                                      src="{% static 'apps/assets/img/icons/spot-illustrations/falcon.png' %}"
                                                                      alt="" width="40"/><span
-                            class="font-sans-serif">ikromjahon</span>
+                            class="font-sans-serif">ikrjahon</span>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" href="{% url 'home' %}" aria-expanded="false">
                                         <div class="d-flex align-items-center"><span
-                                                class="nav-link-text ps-1">Bosh sahifa</span>
+                                                class="nav-link-text ps-1">Bosha sahifa</span>
                                         </div>
                                     </a>
                                 </li>
