--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -19,7 +19,10 @@
                 	<div class="col-4 col-md-4 col-lg-3 col-xx1-2 mb-1">
                         <div class="bg-white dark__bg-1100 p-1 h-100">
                                 <a href="{% url "product" category.slug %}">
-                                    <img class="category-icon img-thumbnail img-fluid mb-3 shadow-sm" src="{{ category.icon }}" alt="{{ category.name }}">
+                                   <img class="category-icon img-thumbnail img-fluid mb-3 shadow-sm" 
+                                     src="{{ category.icon }}" 
+                                     alt="{{ category.name }}"
+                                     style="width: 150px; height: 150px; object-fit: cover;">
                                 </a>
                                 <h6 class="mb-1">
                                     <a href="{% url "product" category.slug %}">{{ category.name }}</a>
