--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -22,7 +22,7 @@
                                <img class="category-icon img-thumbnail img-fluid mb-3 shadow-sm"
                                  src="{{ category.icon }}"
                                  alt="{{ category.name }}"
-                                 style="width: 120px; height: 120px; object-fit: cover;">
+                                 style="width: 140px; height: 100px; border-radius: 4px; object-fit: cover;">
                             </a>
                                 <h6 class="mb-1">
                                     <a href="{% url "product" category.slug %}">{{ category.name }}</a>
